@@ -11,6 +11,7 @@ import java.util.stream.Collectors;
 
 import static com.secure.secureAPP.user.Permission.*;
 
+@Getter
 @RequiredArgsConstructor
 public enum Role {
 
@@ -23,17 +24,15 @@ public enum Role {
     );
 
 
-    @Getter
     private final Set<Permission> permissions;
 
 
     public List<SimpleGrantedAuthority> getAuthorities() {
-        var authorities = getPermissions().stream()
-                .map(permission -> new SimpleGrantedAuthority(permission.toString()))
-                .toList();
-
+        var authorities = getPermissions()
+                .stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
         authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
-
         return authorities;
     }
 }
